# airflow_clean_code

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
dags/: asistencia_mensual_parvulos_dag.py  base_macros_dag.py  base_parvulos_parquet_dag.py  dummy_dag.py  enfermedades_parvulos_dag.py
src/common/: crear_carpetas.py
src/common/sharepoint/: upload.py
src/gpw/: bases_parvulos.py
src/gpw/database/: consultas.py
tests/: test_postgresql_connection.py
